# ExpertA

./: .dockerignore  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  chelsea_persona_roadmap.md  chelsea_reddit_posts_20250730_151452.json  chelsea_reddit_scraper.py  feed_chelsea_knowledge.py  fix_indentation.py  fix_knowledge_base.py  fix_payment_indentation.py  fix_training_tables.py  health_server.py  package-lock.json  package.json  quick_fix.py  rag_evaluation_20250814_121558.json  rag_evaluation_fixed.py  rag_evaluation_summary_20250814_121558.csv  railway-run.sh  railway.json  railway.toml  requirements.txt  requirements_reddit.txt  run.sh  server.js  setup.sh  start-django.sh  start.sh  wsgi.py
backend/: .dockerignore  .env.example  Chelsea_Interview_Simulation.txt  Dockerfile  HEROKU_ASYNC_SETUP.md  Procfile  REDIS_SETUP.md  analyze_chelsea_interview.py  build.sh  entrypoint.sh  health.py  install_packages.sh  manage.py  nixpacks.toml  package.json  project.toml  pyproject.toml  railway.json  railway.toml  requirements-docker.txt  requirements-jwt.txt  requirements-minimal-test.txt  requirements-minimal.txt  requirements-railway.txt  requirements.txt  requirements_old2.txt  server.js  start_worker.py  wsgi.py
backend/.railway/: config.json
backend/api/: apps.py  async_tasks.py  document_views.py  jwt_views.py  knowledge_training.py  models.py  pinecone_utils.py  serializers.py  services.py  services_old.py  tasks.py  trainers.py  training_views.py  urls.py  utils.py  views.py
backend/backend/: settings.py
(+140 files in other folders)
